<resources>
    <string name="app_name">MaterialYouDemo</string>
    <string name="main_page_header">Page header</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_another_text">Enter another text</string>
    <string name="first_option">First option</string>
    <string name="second_option">Second option</string>
    <string name="save_changes">Save changes</string>
    <string name="dialog_title">Title</string>
    <string name="sample_text">This is a sample text</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum metus sapien, rhoncus eget nulla vel, blandit lacinia sem. Quisque consequat lorem id risus tincidunt, sed pellentesque orci tincidunt. Aenean ut accumsan augue. Integer mattis, massa ac molestie gravida, sapien mauris mattis turpis, eget bibendum diam libero vel lectus. Donec vel rutrum augue, vel tristique diam. Praesent non vehicula lorem. Nulla tincidunt iaculis posuere. Donec scelerisque est eu nunc consequat sollicitudin nec non ligula. Proin porttitor dui sit amet nisl ornare efficitur. Curabitur consectetur iaculis bibendum.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum metus sapien, rhoncus eget nulla vel, blandit lacinia sem. Quisque consequat lorem id risus tincidunt, sed pellentesque orci tincidunt.</string>
    <string name="length_error">%d chars maximum</string>
</resources>
